# Group-augmentation-RN

./: .gitignore  CMakeLists.txt  main.cpp
src/: Classes.cpp  Configuration.h  Individual.cpp  Individual.h  classes.h  configuration.h  main.cpp
